Fixed app for components

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -54,7 +54,7 @@
       <section class="light">
         <div class="container-fluid app">
           <ul class="nav nav-tabs">
-            <li><a data-toggle="tab" href="/corporate-ui-docs/component/"><i class="icon-angle-left"></i> Back</a></li>
+            <li><a href="/corporate-ui-docs/component/" class="back"><i class="icon-angle-left"></i> Back</a></li>
             <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
@@ -68,14 +68,16 @@
               <scania-doc></scania-doc>
             </div>
 
-            <div id="usage" class="tab-pane fade">
+            <div id="usage" class="tab-pane fade app">
               <h2>Scania Components</h2>
               <p>Use this component where applicable. If you do need for example a main navigation in your application, use the one found among these components. These are all signed of by the Scania Headquarters and there is no reason to create something similar. Do not re-invent the wheel.</p>
             </div>
 
-            <div id="html-code" class="tab-pane fade">
+            <div id="html-code" class="tab-pane fade app">
               <h2>Copy and Paste the code</h2>
-              <p>In connection to each variation of a component there is a CODE button. Copy that code and paste it in your template page.</p>
+              <p>In connection to each variation of a component there is a CODE button. Copy that code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download>basic template for applications</a> or your <a href="/corporate-ui-docs/template/basic-template.html" download>this basic template for public sites</a>.
+
+            </p>
             </div>
 
           </div>
