--- a/docs/component/scania-doc/scania-doc.html
+++ b/docs/component/scania-doc/scania-doc.html
@@ -18,11 +18,11 @@
     	    <template is="dom-repeat" items="{{descriptor}}" as="descitem">
 
             <template is="dom-if" if="{{!template}}">
-              <iron-doc-viewer for="{{forItem(descriptor.*, 0, 'subdesc.is')}}" descriptor="{{descitem.subdesc}}"></iron-doc-viewer>
+              <iron-doc-viewer class="descriptionX" for="{{forItem(descriptor.*, 0, 'subdesc.is')}}" descriptor="{{descitem.subdesc}}"></iron-doc-viewer>
             </template>
 
             <template is="dom-if" if="{{template}}">
-              <marked-element class="markdown" markdown="[[descitem.subdesc.desc]]"></marked-element>
+              <marked-element class="markdown variationsX" markdown="[[descitem.subdesc.desc]]"></marked-element>
             </template>
 
           </template>
