Added jQuery Appeend to

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -19,11 +19,25 @@
     <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
     <script>
-     var tabs = document.querySelectorAll('.nav-tabs a')
+      var tabs = document.querySelectorAll('.nav-tabs a')
        for(var i=0; i<tabs.length; i++) {
          new Tab(tabs[i])
-       }
+      }
+
+      $(function(){
+
+        $("demo-component marked-element").appendTo("#html-code");
+
+      });  
+
     </script>
+
+    <style>
+      pre code {
+        padding: 0;
+        font-size: 14px;
+      }
+    </style>  
 
   </head>
   <body class="scania ux-lib">
@@ -70,14 +84,13 @@
 
             <div id="usage" class="tab-pane fade app">
               <h2>Scania Components</h2>
+              <p class="jQueryAppendTo"><p>
               <p>Use this component where applicable. If you do need for example a main navigation in your application, use the one found among these components. These are all signed of by the Scania Headquarters and there is no reason to create something similar. Do not re-invent the wheel.</p>
             </div>
 
             <div id="html-code" class="tab-pane fade app">
               <h2>Copy and Paste the code</h2>
-              <p>In connection to each variation of a component there is a CODE button. Copy that code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download>basic template for applications</a> or your <a href="/corporate-ui-docs/template/basic-template.html" download>this basic template for public sites</a>.
-
-            </p>
+              <p>In connection to each variation of a component there is a code snippet. Copy the code below and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download>basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download>this basic template for public sites</a>.</p>
             </div>
 
           </div>
