--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -26,7 +26,7 @@
 
       $(function(){
 
-        $("demo-component marked-element").appendTo("#html-code");
+       $("marked-element .code-template").appendTo("#usage");
 
       });  
 
