--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -26,7 +26,7 @@
 
       $(function(){
 
-       $("marked-element .code-template").appendTo("#usage");
+       $("pre.demo-component").appendTo("#html-code");
 
 
     </script>
@@ -36,7 +36,7 @@
         padding: 0;
         font-size: 14px;
       }
-
+      .codeheader,
       h3[id^="variation-"] + p,
       h3[id^="variation-"] {
         display:none;
