--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -26,7 +26,15 @@
 
       $(function(){
 
-       $("pre.demo-component").appendTo("#html-code");
+      $("pre.demo-component").appendTo("#html-code");
+
+      $("h3[id^='variation-']").remove();
+      $("h3[id^=variation-] + p").remove();
+      $(".codeheader").remove();
+
+
+      $("section#summary marked-element p").appendTo("#usage p");
+
 
 
     </script>
@@ -35,11 +43,6 @@
       pre code {
         padding: 0;
         font-size: 14px;
-      }
-      .codeheader,
-      h3[id^="variation-"] + p,
-      h3[id^="variation-"] {
-        display:none;
       }
 
     </style>  
