--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -26,7 +26,7 @@
 
       $(function(){
 
-      $("pre.demo-component").appendTo("#html-code");
+      $(".demo-component code").appendTo("#html-code pre.demo-component");
 
       $("h3[id^='variation-']").remove();
       $("h3[id^=variation-] + p").remove();
@@ -99,6 +99,7 @@
             <div id="html-code" class="tab-pane fade app">
               <h2>Copy and Paste the code</h2>
               <p>In connection to each variation of a component there is a code snippet. Copy the code below and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download>basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download>this basic template for public sites</a>.</p>
+              <pre class="demo-component"></pre>
             </div>
 
           </div>
