--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -52,7 +52,7 @@
 
       #example h3[id^='variation-'] {
         font-size: 20px;
-        border-bottom: 2px solid #041e42;
+        border-bottom: 2px solid #94A596;
         padding-bottom: 5px;
         text-align: left;
       }
