--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -55,6 +55,8 @@
         border-bottom: 2px solid #94A596;
         padding-bottom: 5px;
         text-align: left;
+        font-family: 'Scania Sans Condensed';
+        margin-bottom: 30px;
       }
 
     </style>  
