--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -44,7 +44,7 @@
 
           $("#example section#summary").css("display","block");
 
-        }, 500);
+        }, 700);
 
     </script>
 
@@ -61,6 +61,10 @@
         text-align: left;
         font-family: 'Scania Sans Condensed';
         margin-bottom: 30px;
+      }
+
+      teaser-item .teaser-info.teaser-item h2 {
+          font-size: 20px;
       }
 
     </style>  
