--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -50,6 +50,11 @@
 
     <style>
 
+      pre code {
+        padding: 0;
+        font-size: 16px;
+      }
+
       #example section#summary {
         display:none;
       }
