Font Family for Code

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -18,6 +18,10 @@
 
     <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
+    <link rel="stylesheet" type="text/css" href="https://static.scania.com/vendors/components/pure-js/highlight.js/styles/color-brewer.css">
+    <script src="https://static.scania.com/vendors/components/pure-js/highlight.js/highlight.pack.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
+
     <script>
       var tabs = document.querySelectorAll('.nav-tabs a')
        for(var i=0; i<tabs.length; i++) {
@@ -53,6 +57,7 @@
       pre code {
         padding: 0;
         font-size: 16px;
+        font-family: 'Roboto Mono';
       }
 
       #example section#summary {
