Added Secondary items

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -22,6 +22,9 @@
     <script src="https://static.scania.com/vendors/components/pure-js/highlight.js/highlight.pack.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
+    <link rel="import" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/components/fullscreen/fullscreen.html">
+
+
     <script>
       var tabs = document.querySelectorAll('.nav-tabs a')
        for(var i=0; i<tabs.length; i++) {
@@ -103,6 +106,9 @@
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
+      <secondary-items>
+        <c-fullscreen></c-fullscreen>
+      </secondary-items>
     </c-main-navigation>
 
       <section class="light">
