--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -32,26 +32,26 @@
       }
 
 
-        setTimeout(function(){  
-          $("pre.demo-component").appendTo("#html-code .jQueryAppendToContainer");
-          $("pre.demo-component").css("display","block");
+        // setTimeout(function(){  
+        //   $("pre.demo-component").appendTo("#html-code .jQueryAppendToContainer");
+        //   $("pre.demo-component").css("display","block");
 
-          // $("h3[id^='variation-']").remove();
-          $("h3[id^=variation-] + p").remove();
-          $(".codeheader").remove();
+        //   // $("h3[id^='variation-']").remove();
+        //   $("h3[id^=variation-] + p").remove();
+        //   $(".codeheader").remove();
 
 
-          $("#example section#summary .container-fluid marked-element .markdown-html:first-child > p").appendTo("#usage .jQueryAppendToContainer");
+        //   $("#example section#summary .container-fluid marked-element .markdown-html:first-child > p").appendTo("#usage .jQueryAppendToContainer");
 
-          $("#example section#summary .container-fluid marked-element .markdown-html > h3#combinations + p").appendTo("#usage .jQueryAppendToContainer");
+        //   $("#example section#summary .container-fluid marked-element .markdown-html > h3#combinations + p").appendTo("#usage .jQueryAppendToContainer");
 
-          $("#example section#summary .container-fluid marked-element .markdown-html p").appendTo("#usage .jQueryAppendToContainer");
+        //   $("#example section#summary .container-fluid marked-element .markdown-html p").appendTo("#usage .jQueryAppendToContainer");
 
-          $("#example section#summary .container-fluid marked-element .markdown-html > h3#combinations ").remove();
+        //   $("#example section#summary .container-fluid marked-element .markdown-html > h3#combinations ").remove();
 
-          $("#example section#summary").css("display","block");
+        //   $("#example section#summary").css("display","block");
 
-        }, 700);
+        // }, 700);
 
     </script>
 
