--- a/docs/component/scania-doc/demo-component.html
+++ b/docs/component/scania-doc/demo-component.html
@@ -3,7 +3,7 @@
 	Displays a demo with a code-example.
 -->
 <dom-module id="demo-component">
-	<script src="/vendors/frameworks/jQuery/3.0.0/dist/jquery.min.js"></script>	
+	<script src="https://static.scania.com/vendors/frameworks/jQuery/3.0.0/dist/jquery.min.js"></script>	
 	<template>
 		<style>
 			:host {
@@ -96,7 +96,7 @@
         	      });
 
 				$(elements).hide();
-        	  }, 100);
+        	  }, 200);
         	  
         	},
 
