Commented out display none

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -63,9 +63,9 @@
         font-family: 'Roboto Mono';
       }
 
-      #example section#summary {
+/*      #example section#summary {
         display:none;
-      }
+      }*/
 
       #example h3[id^='variation-'] {
         font-size: 20px;
