--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -169,7 +169,22 @@ property.
       </section>
     </div>
     </div>
+    <section class$="summary {{for}}" hidden$="[[!descriptor.desc]]">
+    <template is="dom-repeat" items="[[mainDesc]]" as="maindescitems">
 
+      <div class="container">
+      <marked-element class="markdown" markdown="[[maindescitems.markdown]]">
+        <div class="markdown-html"></div>
+      </marked-element>
+      </div>
+      <template is="dom-if" if="[[maindescitems.demo]]">
+        <demo-component data="[[maindescitems.demo]]">
+        </demo-component>
+      </template>
+      
+    </template>
+      
+    </section>
     </template>
     
 
