Added tabs documentation

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -119,6 +119,10 @@
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
           </ul>
+          <ul class="nav nav-tabs nav-tabs-light container">
+            <li class="active app-styling"><a href="#">Application Styling</a></li>
+            <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+          </ul>
         </div>
         <div class="container-fluid">     
 
