--- a/docs/template/basic-template-app.html
+++ b/docs/template/basic-template-app.html
@@ -96,84 +96,86 @@
 								<h3>Removing the panel heading</h3>
 								<p>Removing the panel heading will give a just a white panel with increased margins.</p>
 								<h4>A table are smaller and more delicate when placed inside a panel</h4>
-								<table class="table table-striped table-sm">
-									<thead>
-										<tr>
-											<th>Name</th>
-											<th>Position</th>
-											<th>Office</th>
-											<th>Age</th>
-											<th>Start date</th>
-											<th>Salary</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td class="text-danger">Tiger Nixon</td>
-											<td class="text-danger">System Architect</td>
-											<td class="text-danger">Edinburgh</td>
-											<td class="text-danger">61</td>
-											<td class="text-danger">2011/04/25</td>
-											<td class="text-danger">$320,800</td>
-										</tr>
-										<tr>
-											<td class="text-warning">Garrett Winters</td>
-											<td class="text-warning">Accountant</td>
-											<td class="text-warning">Tokyo</td>
-											<td class="text-warning">63</td>
-											<td class="text-warning">2011/07/25</td>
-											<td class="text-warning">$170,750</td>
-										</tr>
-										<tr>
-											<td class="text-danger">Ashton Cox</td>
-											<td class="text-danger">Junior Technical Author</td>
-											<td class="text-danger">San Francisco</td>
-											<td class="text-danger">66</td>
-											<td class="text-danger">2009/01/12</td>
-											<td class="text-danger">$86,000</td>
-										</tr>
-										<tr>
-											<td class="text-danger">Cedric Kelly</td>
-											<td class="text-danger">Senior Javascript Developer</td>
-											<td class="text-danger">Edinburgh</td>
-											<td class="text-danger">22</td>
-											<td class="text-danger">2012/03/29</td>
-											<td class="text-danger">$433,060</td>
-										</tr>
-										<tr>
-											<td class="text-danger">Airi Satou</td>
-											<td class="text-danger">Accountant</td>
-											<td class="text-danger">Tokyo</td>
-											<td class="text-danger">33</td>
-											<td class="text-danger">2008/11/28</td>
-											<td class="text-danger">$162,700</td>
-										</tr>
-										<tr>
-											<td class="text-warning">Brielle Williamson</td>
-											<td class="text-warning">Integration Specialist</td>
-											<td class="text-warning">New York</td>
-											<td class="text-warning">61</td>
-											<td class="text-warning">2012/12/02</td>
-											<td class="text-warning">$372,000</td>
-										</tr>
-										<tr>
-											<td class="text-danger">Herrod Chandler</td>
-											<td class="text-danger">Sales Assistant</td>
-											<td class="text-danger">San Francisco</td>
-											<td class="text-danger">59</td>
-											<td class="text-danger">2012/08/06</td>
-											<td class="text-danger">$137,500</td>
-										</tr>
-										<tr>
-											<td class="text-danger">Rhona Davidson</td>
-											<td class="text-danger">Integration Specialist</td>
-											<td class="text-danger">Tokyo</td>
-											<td class="text-danger">55</td>
-											<td class="text-danger">2010/10/14</td>
-											<td class="text-danger">$327,900</td>
-										</tr>
-									</tbody>
-								</table>
+								<div class="table-responsive">
+									<table class="table table-striped table-sm">
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Position</th>
+												<th>Office</th>
+												<th>Age</th>
+												<th>Start date</th>
+												<th>Salary</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="text-danger">Tiger Nixon</td>
+												<td class="text-danger">System Architect</td>
+												<td class="text-danger">Edinburgh</td>
+												<td class="text-danger">61</td>
+												<td class="text-danger">2011/04/25</td>
+												<td class="text-danger">$320,800</td>
+											</tr>
+											<tr>
+												<td class="text-warning">Garrett Winters</td>
+												<td class="text-warning">Accountant</td>
+												<td class="text-warning">Tokyo</td>
+												<td class="text-warning">63</td>
+												<td class="text-warning">2011/07/25</td>
+												<td class="text-warning">$170,750</td>
+											</tr>
+											<tr>
+												<td class="text-danger">Ashton Cox</td>
+												<td class="text-danger">Junior Technical Author</td>
+												<td class="text-danger">San Francisco</td>
+												<td class="text-danger">66</td>
+												<td class="text-danger">2009/01/12</td>
+												<td class="text-danger">$86,000</td>
+											</tr>
+											<tr>
+												<td class="text-danger">Cedric Kelly</td>
+												<td class="text-danger">Senior Javascript Developer</td>
+												<td class="text-danger">Edinburgh</td>
+												<td class="text-danger">22</td>
+												<td class="text-danger">2012/03/29</td>
+												<td class="text-danger">$433,060</td>
+											</tr>
+											<tr>
+												<td class="text-danger">Airi Satou</td>
+												<td class="text-danger">Accountant</td>
+												<td class="text-danger">Tokyo</td>
+												<td class="text-danger">33</td>
+												<td class="text-danger">2008/11/28</td>
+												<td class="text-danger">$162,700</td>
+											</tr>
+											<tr>
+												<td class="text-warning">Brielle Williamson</td>
+												<td class="text-warning">Integration Specialist</td>
+												<td class="text-warning">New York</td>
+												<td class="text-warning">61</td>
+												<td class="text-warning">2012/12/02</td>
+												<td class="text-warning">$372,000</td>
+											</tr>
+											<tr>
+												<td class="text-danger">Herrod Chandler</td>
+												<td class="text-danger">Sales Assistant</td>
+												<td class="text-danger">San Francisco</td>
+												<td class="text-danger">59</td>
+												<td class="text-danger">2012/08/06</td>
+												<td class="text-danger">$137,500</td>
+											</tr>
+											<tr>
+												<td class="text-danger">Rhona Davidson</td>
+												<td class="text-danger">Integration Specialist</td>
+												<td class="text-danger">Tokyo</td>
+												<td class="text-danger">55</td>
+												<td class="text-danger">2010/10/14</td>
+												<td class="text-danger">$327,900</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>	
 							</div>
 						</div>
 					</div>
@@ -189,88 +191,92 @@
 						</ul>
 					</div>
 					<div class="col-md-9">
-						<table class="table table-striped table-clickable table-panel">
-							<thead>
-								<tr>
-									<th>Name</th>
-									<th>Position</th>
-									<th>Office</th>
-									<th>Age</th>
-									<th>Start date</th>
-									<th>Salary</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>Tiger Nixon</td>
-									<td>System Architect</td>
-									<td>Edinburgh</td>
-									<td>61</td>
-									<td>2011/04/25</td>
-									<td>$320,800</td>
-								</tr>
-								<tr>
-									<td class="text-warning">Garrett Winters</td>
-									<td class="text-warning">Accountant</td>
-									<td class="text-warning">Tokyo</td>
-									<td class="text-warning">63</td>
-									<td class="text-warning">2011/07/25</td>
-									<td class="text-warning">$170,750</td>
-								</tr>
-								<tr>
-									<td>Ashton Cox</td>
-									<td>Junior Technical Author</td>
-									<td>San Francisco</td>
-									<td>66</td>
-									<td>2009/01/12</td>
-									<td>$86,000</td>
-								</tr>
-								<tr>
-									<td>Cedric Kelly</td>
-									<td>Senior Javascript Developer</td>
-									<td>Edinburgh</td>
-									<td>22</td>
-									<td>2012/03/29</td>
-									<td>$433,060</td>
-								</tr>
-								<tr>
-									<td>Airi Satou</td>
-									<td>Accountant</td>
-									<td>Tokyo</td>
-									<td>33</td>
-									<td>2008/11/28</td>
-									<td>$162,700</td>
-								</tr>
-								<tr>
-									<td class="text-danger">Brielle Williamson</td>
-									<td class="text-danger">Integration Specialist</td>
-									<td class="text-danger">New York</td>
-									<td class="text-danger">61</td>
-									<td class="text-danger">2012/12/02</td>
-									<td class="text-danger">$372,000</td>
-								</tr>
-								<tr>
-									<td>Herrod Chandler</td>
-									<td>Sales Assistant</td>
-									<td>San Francisco</td>
-									<td>59</td>
-									<td>2012/08/06</td>
-									<td>$137,500</td>
-								</tr>
-								<tr>
-									<td>Rhona Davidson</td>
-									<td>Integration Specialist</td>
-									<td>Tokyo</td>
-									<td>55</td>
-									<td>2010/10/14</td>
-									<td>$327,900</td>
-								</tr>
-							</tbody>
-						</table>   	
+						<div class="table-responsive">
+							<table class="table table-striped table-clickable table-panel">
+								<thead>
+									<tr>
+										<th>Name</th>
+										<th>Position</th>
+										<th>Office</th>
+										<th>Age</th>
+										<th>Start date</th>
+										<th>Salary</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>Tiger Nixon</td>
+										<td>System Architect</td>
+										<td>Edinburgh</td>
+										<td>61</td>
+										<td>2011/04/25</td>
+										<td>$320,800</td>
+									</tr>
+									<tr>
+										<td class="text-warning">Garrett Winters</td>
+										<td class="text-warning">Accountant</td>
+										<td class="text-warning">Tokyo</td>
+										<td class="text-warning">63</td>
+										<td class="text-warning">2011/07/25</td>
+										<td class="text-warning">$170,750</td>
+									</tr>
+									<tr>
+										<td>Ashton Cox</td>
+										<td>Junior Technical Author</td>
+										<td>San Francisco</td>
+										<td>66</td>
+										<td>2009/01/12</td>
+										<td>$86,000</td>
+									</tr>
+									<tr>
+										<td>Cedric Kelly</td>
+										<td>Senior Javascript Developer</td>
+										<td>Edinburgh</td>
+										<td>22</td>
+										<td>2012/03/29</td>
+										<td>$433,060</td>
+									</tr>
+									<tr>
+										<td>Airi Satou</td>
+										<td>Accountant</td>
+										<td>Tokyo</td>
+										<td>33</td>
+										<td>2008/11/28</td>
+										<td>$162,700</td>
+									</tr>
+									<tr>
+										<td class="text-danger">Brielle Williamson</td>
+										<td class="text-danger">Integration Specialist</td>
+										<td class="text-danger">New York</td>
+										<td class="text-danger">61</td>
+										<td class="text-danger">2012/12/02</td>
+										<td class="text-danger">$372,000</td>
+									</tr>
+									<tr>
+										<td>Herrod Chandler</td>
+										<td>Sales Assistant</td>
+										<td>San Francisco</td>
+										<td>59</td>
+										<td>2012/08/06</td>
+										<td>$137,500</td>
+									</tr>
+									<tr>
+										<td>Rhona Davidson</td>
+										<td>Integration Specialist</td>
+										<td>Tokyo</td>
+										<td>55</td>
+										<td>2010/10/14</td>
+										<td>$327,900</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>	  	
 					</div>
 				</div>
-			</section>
-			<section class="light">
+			</div>
+		</section>
+		<section class="light">
+			<div class="container-fluid">	
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="panel panel-default">
@@ -408,8 +414,7 @@
 						</div>
 					</div>
 				</div>
-			</div>  
-		</div>
+			</div>	
 		</section>
 	</c-main-content>
 	<c-corporate-footer></c-corporate-footer>
