--- a/docs/template/basic-template-app.html
+++ b/docs/template/basic-template-app.html
@@ -278,7 +278,7 @@
 		<section class="light">
 			<div class="container-fluid">	
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
+					<div class="col-lg-8 col-lg-offset-2">
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<ul class="nav nav-tabs">
