--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -3,22 +3,20 @@
 
 /* Styles for the Components Page */
 
-/*iron-doc-viewer .code.iron-doc-viewer {
-    color: #041442;
-    background-color: #fff;
-    font-size: 30px;
-    display: block;
-}
-*/
-
-.codeheader {
-    cursor: pointer;
-}
 
 /* End styles Components Page */
 
 
 body.CRStest {background:red !important}
+
+.nav-tabs-light > li:first-child a {
+    padding-left: 6px;
+}
+
+.nav-tabs-light > li.active:first-child a {
+    margin: 15px 17px 13px 6px;
+}
+
 
 .text-left {text-align:left !important;}
 .text-center {text-align:center !important;}
@@ -38,11 +36,6 @@ body.CRStest {background:red !important}
 
 
 html {opacity:1;}
-
-
-img[alt='Clone me on GitHub'] {
-  display: none;
-}
 
 a[href="/corporate-ui-docs/template/"],
 a[href="/corporate-ui-docs/component/"] { 
@@ -69,6 +62,7 @@ p a {font-weight: bold}
 .ux-lib.done-loading[version-notfound]:after {
   opacity: 0;
 }
+
 .ux-lib demo-component .modal {
   position: relative;
 }
