--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -14,7 +14,7 @@ body.CRStest {background:red !important}
 }
 
 .nav-tabs-light > li.active:first-child a {
-    margin: 15px 17px 13px 6px;
+    margin: 15px 16px 13px 6px;
 }
 
 
@@ -32,7 +32,12 @@ body.CRStest {background:red !important}
     margin-top: 4px;
     margin-bottom: 10px;
   }
+  .app .nav-tabs > li > a {
+      padding: 5px 8px 3px 8px;
+  }  
 }
+
+
 
 
 html {opacity:1;}
