--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -83,7 +83,7 @@
     </style>  
 
   </head>
-  <body class="scania ux-lib">
+  <body class="scania app ux-lib">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
@@ -164,7 +164,7 @@
       var docElm = document.querySelector('scania-doc')
       docElm.setAttribute('for', CorporateUi.getUrlParameter('c'));
       docElm.setAttribute('src', path);
-      
+
     </script>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/ux-library.js"></script>
