--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -26,6 +26,7 @@
 
 
     <script>
+
       var tabs = document.querySelectorAll('.nav-tabs a')
        for(var i=0; i<tabs.length; i++) {
          new Tab(tabs[i])
@@ -120,8 +121,8 @@
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
           </ul>
           <ul class="nav nav-tabs nav-tabs-light container">
-            <li class="active app-styling"><a href="#">Application Styling</a></li>
-            <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+            <li class="app-styling"><a href="#">Application Styling</a></li>
+            <li class="active public-styling"><a href="#">Public Site Styling</a></li>   
           </ul>
         </div>
         <div class="container-fluid">     
