--- a/docs/template/basic-template.html
+++ b/docs/template/basic-template.html
@@ -36,7 +36,7 @@
 		</c-main-navigation>
 		<section>
 
-			<link rel="import" href="https://static.scania.com/build/global/3.1.0/components/teaser/teaser.html">
+			<link rel="import" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/components/teaser/teaser.html">
 			<c-teaser variation="1" headline="Increase Productivity" description="Molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et.">
 				<teaser-item headline="Life at Scania" image="https://static.scania.com/resources/images/demo/truck-tires-mud.png">
 					Scania’s spirit of leadership is built upon shared and inclusive core values. This creates a unique climate where our employees enjoy taking on responsibility – and the chance to develop and realise their potential.
