Added nav  item for full-screen

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -27,9 +27,6 @@
 
     <script>
 
-
-
-
         setTimeout(function(){  
           $("pre.demo-component").appendTo("#html-code .jQueryAppendToContainer");
           $("pre.demo-component").css("display","block");
@@ -105,7 +102,9 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
       <secondary-items>
-        <c-fullscreen></c-fullscreen>
+        <nav-item>
+          <c-fullscreen></c-fullscreen>
+        </nav-item>
       </secondary-items>
     </c-main-navigation>
 
