Added thing back

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -90,7 +90,7 @@
 </html>
 
 
-<!--     Additional Fields added below
+<!--     Additional Fields added below -->
 
     <c-corporate-header site-name="{{example.siteName}}" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
       <nav-item location="{{example.topLinkhRef}}">{{example.topLinkName}}</nav-item>
@@ -144,4 +144,4 @@
         this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
         this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
       }
-    </script> -->
+    </script> 
