--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -35,8 +35,8 @@
 
   <body class="scania" ng-controller="Example as example">
 
-    <c-corporate-header site-name="Developers" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
-      <nav-item location="https://scania.com/se/sv/home.html">Scania i Sverige</nav-item>
+    <c-corporate-header site-name="{{example.siteName}}" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
+      <nav-item location="{{example.topLinkhRef}}">{{example.topLinkName}}</nav-item>
     </c-corporate-header>
 
     <c-main-content>
@@ -52,54 +52,7 @@
           <p>Simulate the look of your page by entering a URL of a logotype picture or if you do not have a picture, just enter a name. As long as there is a logotype picture available, the dealer name will nog be shown as text.</p>
 
           <form class="app">
-            <div class="form-group">
-              <label>Name</label>
-              <input type="text" class="form-control" placeholder="dealer-name" ng-model="example.dealerName">
-            </div>
-
-            <div class="form-group">
-              <label>Logo</label>
-              <input type="text" class="form-control" placeholder="dealer-logo" ng-model="example.dealerLogo">
-            </div>
-
-            <div class="form-group">
-              <label>URL</label>
-              <input type="text" class="form-control" placeholder="dealer-url" ng-model="example.dealerUrl">
-            </div>
-          </form>
-        </div>
-      </section>
-    </c-main-content>
-
-    <c-corporate-footer></c-corporate-footer>
-
-    <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
-
-    <script>
-      angular
-        .module('CorporateUI', [])
-        .controller('Example', [Example])
-
-      function Example() {
-        this.dealerName = 'Bilmetro';
-        this.dealerLogo = 'https://www.scania.com/content/dam/scanianoe/dealer-content-assets/sverige/bilmetro/bilmetro-logo.png';
-        this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
-      }
-    </script>
-  </body>
-</html>
-
-
-<!--     Additional Fields added below -->
-
-    <c-corporate-header site-name="{{example.siteName}}" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
-      <nav-item location="{{example.topLinkhRef}}">{{example.topLinkName}}</nav-item>
-    </c-corporate-header>
-
-
-
-          <form class="app">
-            <div class="form-group">
+          <div class="form-group">
               <label>Dealer logotype</label>
               <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
             </div>
@@ -130,6 +83,29 @@
             </div>
       
           </form>
+        </div>
+      </section>
+      <section>
+        <div id="html-code" class="app">
+          <h2>Code Sample</h2>
+          <pre>
+            <code class="html">  
+  &lt;nav-item location="#"&gt;privacy policy&lt;/nav-item&gt;
+  &lt;nav-item location="#"&gt;terms &amp;amp; conditions&lt;/nav-item&gt;
+  &lt;nav-item location="#"&gt;cookies&lt;/nav-item&gt;
+  &lt;nav-item location="#"&gt;site map&lt;/nav-item&gt;
+  &lt;nav-item location="#"&gt;contact us&lt;/nav-item&gt;
+  &lt;nav-item location="#"&gt;accessibility&lt;/nav-item&gt;
+            </code>
+          </pre>
+          <p>Copy the code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">this basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
+      </div>
+
+    </c-main-content>
+
+    <c-corporate-footer></c-corporate-footer>
+
+    <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
     <script>
       angular
@@ -144,4 +120,6 @@
         this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
         this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
       }
-    </script> 
+    </script>
+  </body>
+</html>
