--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -89,13 +89,12 @@
         <div id="html-code" class="app">
           <h2>Code Sample</h2>
           <pre>
-            <code class="html">  
-  &lt;nav-item location="#"&gt;privacy policy&lt;/nav-item&gt;
-  &lt;nav-item location="#"&gt;terms &amp;amp; conditions&lt;/nav-item&gt;
-  &lt;nav-item location="#"&gt;cookies&lt;/nav-item&gt;
-  &lt;nav-item location="#"&gt;site map&lt;/nav-item&gt;
-  &lt;nav-item location="#"&gt;contact us&lt;/nav-item&gt;
-  &lt;nav-item location="#"&gt;accessibility&lt;/nav-item&gt;
+            <code class="html">
+
+              &lt;c-corporate-header site-name="{{example.siteName}}" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}"&gt;
+                &lt;nav-item location="{{example.topLinkhRef}}">{{example.topLinkName}}&lt;/nav-item&gt;
+              &lt;/c-corporate-header&gt;
+              
             </code>
           </pre>
           <p>Copy the code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">this basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
