--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -83,14 +83,16 @@
             </div>
       
           </form>
+
+
           <div id="html-code" class="app">
             <h2>Code Sample</h2>
             <pre>
               <code class="html">
 
-  <c-corporate-header site-name="{{example.siteName}}" site-url="{{example.dealerUrl}}" dealer-name="{{example.dealerName}}"dealer-logo="{{example.dealerLogo}}" dealer-url="{{example.dealerUrl}}">
-    <nav-item location="{{example.topLinkhRef}}">{{example.topLinkName}}</nav-item>
-  </c-corporate-header>
+                &lt;c-corporate-header site-name="{{example.siteName}}" site-url="{{example.dealerUrl}}" dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" dealer-url="{{example.dealerUrl}}"&gt;
+                  &lt;nav-item location="{{example.topLinkhRef}}"&gt;{{example.topLinkName}}&lt;/nav-item&gt;
+                &lt;/c-corporate-header&gt;
 
               </code>
             </pre>
