--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -52,20 +52,21 @@
           <p>Simulate the look of your page by entering a URL of a logotype picture or if you do not have a picture, just enter a name. As long as there is a logotype picture available, the dealer name will nog be shown as text.</p>
 
           <form class="app">
-          <div class="form-group">
-              <label>Dealer logotype</label>
-              <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
-            </div>
-
-            <div class="form-group">
-              <label>Logotype link</label>
-              <input type="text" class="form-control" placeholder="URL to visit when clicking the logotype" ng-model="example.dealerUrl">
-            </div>
 
             <div class="form-group">
               <label>Dealer name</label>
               <input type="text" class="form-control" placeholder="Dealer name" ng-model="example.dealerName">
+            </div>
+
+            <div class="form-group">
+              <label>Dealer Home link</label>
+              <input type="text" class="form-control" placeholder="URL to visit when clicking the logotype" ng-model="example.dealerUrl">
             </div>            
+
+            <div class="form-group">
+              <label>Dealer logotype</label>
+              <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
+            </div>
 
             <div class="form-group">
               <label>Site name</label>
