--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -8,6 +8,11 @@
       <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
     </noscript>
 
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+
+
     <title>Corporate UI - Dealer Header Code Generator</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
@@ -119,6 +124,13 @@
         this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
         this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
       }
+
+      $(document).ready(function() {
+        $('pre code').each(function(i, block) {
+          hljs.highlightBlock(block);
+        });
+      });
+      
     </script>
   </body>
 </html>
