--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -8,11 +8,6 @@
       <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
     </noscript>
 
-<link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-
-
     <title>Corporate UI - Dealer Header Code Generator</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
@@ -113,6 +108,11 @@
     <c-corporate-footer></c-corporate-footer>
 
     <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
+
+    <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
+    <link rel="stylesheet"
+        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
     <script>
       angular
