Added GitrHub Style

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -89,7 +89,7 @@
           <div id="html-code" class="app">
             <h2>Code Sample</h2>
             <pre>
-              <code class="htmlbars">
+              <code class="html">
 
 &lt;c-corporate-header site-name=&quot;{{example.siteName}}&quot; site-url=&quot;{{example.dealerUrl}}&quot; dealer-name=&quot;{{example.dealerName}}&quot; dealer-logo=&quot;{{example.dealerLogo}}&quot; dealer-url=&quot;{{example.dealerUrl}}&quot;&gt;
   &lt;nav-item location=&quot;{{example.topLinkHref}}&quot;&gt;{{example.topLinkName}}&lt;/nav-item&gt;
@@ -111,7 +111,7 @@
 
     <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
     <link rel="stylesheet"
-        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+        href="https://highlightjs.org/static/demo/styles/github.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
     <script>
