--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -137,5 +137,15 @@
       // });
 
     </script>
+    <style>
+      nav.nav.navbar-nav.navbar-right.style-scope.c-corporate-header > nav-item {
+          font-family: "Scania Sans";
+          font-weight: normal;
+          font-size: 12px;
+          color: #747472;
+          text-transform: uppercase;
+        }
+    </style>
+
   </body>
 </html>
