--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -18,8 +18,6 @@
 
     <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
-    <link rel="stylesheet" type="text/css" href="https://static.scania.com/vendors/components/pure-js/highlight.js/styles/color-brewer.css">
-    <script src="https://static.scania.com/vendors/components/pure-js/highlight.js/highlight.pack.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
     <link rel="import" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/components/fullscreen/fullscreen.html">
@@ -60,8 +58,12 @@
 
       pre code {
         padding: 0;
-        font-size: 16px;
+        font-size: 14px;
         font-family: 'Roboto Mono';
+      }
+
+      pre {
+        background-color: #f8f8f8;
       }
 
       #example section.summary {
@@ -175,14 +177,5 @@
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/ux-library.js"></script>
     <script src="/corporate-ui-docs/ux-lib.js"></script>   
-
-    <link rel="stylesheet"
-        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-    <link rel="stylesheet"
-        href="https://highlightjs.org/static/demo/styles/github.css">        
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-
-
-
   </body>
 </html>
