--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -64,7 +64,7 @@
 
       pre {
         background-color: #f8f8f8;
-      }
+      }      
 
       #example section.summary {
         display:none;
@@ -177,5 +177,14 @@
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/ux-library.js"></script>
     <script src="/corporate-ui-docs/ux-lib.js"></script>   
+
+    <link rel="stylesheet"
+        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <link rel="stylesheet"
+        href="https://highlightjs.org/static/demo/styles/github.css">        
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+
+
+
   </body>
 </html>
