Added styles for brand

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -145,6 +145,15 @@
           color: #747472;
           text-transform: uppercase;
         }
+
+        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
+          display: inline-block;
+          margin: 20px -15px 20px 15px;
+          text-transform: none;
+          font-size: 2.2rem;
+          vertical-align: middle;
+        }
+        
     </style>
 
   </body>
