--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -152,8 +152,9 @@
           text-transform: none;
           font-size: 2.2rem;
           vertical-align: middle;
+          color: #fff;
         }
-        
+
     </style>
 
   </body>
